--- a/[Python] 조건문&반복문.ipynb
+++ b/[Python] 조건문&반복문.ipynb
@@ -301,7 +301,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -338,6 +340,77 @@
     "\n",
     "## 1부터 100사이의 5의 배수를 가지는 리스트 생성\n",
     "list(range(5,101,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### if & for 연습문제\n",
+    "   \n",
+    "  2. 1 - 100까지 정수 중 2의 배수 또는 11의 배수를 모두 출력하시오. \n",
+    "  4. a = [22, 1, 3, 4, 7, 98, 21, 55, 87, 99, 19, 20, 45] 에서 최대값과 최소값을 찾으시오. (sorted, sort 사용 금지)\n",
+    "  5. a = [22, 1, 3, 4, 7, 98, 21, 55, 87, 99, 19, 20, 45] 에서 평균을 구하세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-8-0e70b97de9d7>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-0e70b97de9d7>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    a = [22, 1, 3, 4, 7, 98, 21, 55, 87, 99, 19, 20, 45]\u001b[0m\n\u001b[1;37m                                                        ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,101):\n",
+    "    if i % 2 == 0 or i % 11 == 0:\n",
+    "        print(\"2 또는 11의 배수:\", i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최소 1 최대 99\n",
+      "합계 481\n",
+      "평균 37.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [22, 1, 3, 4, 7, 98, 21, 55, 87, 99, 19, 20, 45]\n",
+    "\n",
+    "_min = a[0]\n",
+    "_max = a[0]\n",
+    "\n",
+    "for i in a:\n",
+    "    if _min > i:\n",
+    "        _min = i\n",
+    "    if _max < i:\n",
+    "        _max = i\n",
+    "        \n",
+    "print(\"최소\", _min, \"최대\", _max)\n",
+    "\n",
+    "_total = 0\n",
+    "\n",
+    "for i in a:\n",
+    "    _total += i\n",
+    " \n",
+    "print(\"합계\", _total)\n",
+    "_mean = _total / len(a)\n",
+    "\n",
+    "print(\"평균\", _mean)"
    ]
   }
  ],
