--- a/[Python] 함수.ipynb
+++ b/[Python] 함수.ipynb
@@ -203,7 +203,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -216,6 +218,198 @@
    "source": [
     "a = \"오늘 온도는 {temp}도이며, 강수확률은 {rain}% 입니다.\".format(rain=20, temp=32)\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 03. Lambda 함수\n",
+    "* 익명함수로 이름이 없는 **구현체만 존재하는 간단한 함수**를 의미\n",
+    "* 1회성 사용 시, 주로 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bob', 'rely', 'mina', ' teddy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "square = lambda x:x**2\n",
+    "square(2)\n",
+    "\n",
+    "## 일반 함수 사용 시\n",
+    "def add(x, y):\n",
+    "    return x+y\n",
+    "\n",
+    "## lambda 함수 사용 시\n",
+    "add2 = lambda x,y:x+y\n",
+    "\n",
+    "add2(2,3)\n",
+    "\n",
+    "## sort의 경우\n",
+    "str = ['bob', ' teddy', 'rely', 'mina']\n",
+    "str.sort(key=lambda s:len(s))\n",
+    "print(str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### filter, map, reduce\n",
+    "* Lambda 함수가 유용하게 사용되는 대표적 예시\n",
+    "\n",
+    "\n",
+    "* **filter** : 특정 조건을 만족하는 요소만 남기고 필터링\n",
+    "* **map** : 각 원소를 주어진 수식에 따라 변형하여 새로운 리스트 반환\n",
+    "* **reduce** : 차례대로 앞 2개의 원소를 가지고 연산 -> 연산의 결과가 또 다음 연산의 입력으로 진행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['str', 'strings']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lengs = filter(lambda x:len(x)>2, [\"str\", \"strings\", \"st\"])\n",
+    "print(list(lengs))\n",
+    "\n",
+    "## filter\n",
+    "nums = [1,2,3,4,5,6,7,8]\n",
+    "list(filter(lambda n:n%2==0, nums))\n",
+    "\n",
+    "## Map\n",
+    "list(map(lambda n:n**2, nums))\n",
+    "\n",
+    "## Reduce\n",
+    "import functools\n",
+    "a = [1, 3, 5, 8]\n",
+    "\n",
+    "functools.reduce(lambda x,y:x*y, a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 연습 문제\n",
+    "1. 주어진 숫자 리스트의 평균을 구하는 함수 출력\n",
+    "2. 해당 숫자가 소수인지 아닌지 판별\n",
+    "3. 2부터 해당 숫자 사이에 소수가 몇개인지 출력하는 함수 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [1,2,3,4,5,6,7,8,9,10]\n",
+    "\n",
+    "\n",
+    "def mean(nums):\n",
+    "    _sum = 0\n",
+    "    for i in nums:\n",
+    "        _sum = _sum + i\n",
+    "    \n",
+    "    return _sum / len(nums)\n",
+    "\n",
+    "mean(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 소수 판별 (1과 자기 자신으로만 나눠지는 수)\n",
+    "\n",
+    "def prime(x):\n",
+    "    for i in range(2, x):\n",
+    "        if x % i == 0: ## 한번이라도 나눠 떨어지면\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "prime(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 소수 Count\n",
+    "\n",
+    "def prime_count(x):\n",
+    "    _count = 0\n",
+    "    for i in range(2, x+1):\n",
+    "        if prime(i):\n",
+    "            _count += 1\n",
+    "    return _count\n",
+    "\n",
+    "prime_count(7)"
    ]
   }
  ],
