--- a/[Python] 정규표현식.ipynb
+++ b/[Python] 정규표현식.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,11 +327,253 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### {} \n",
+    "* 패턴 뒤에 위치하는 중괄호에 숫자를 명시하면, 해당 숫자만큼 반복인 경우에 매칭"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='aaa'>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## {3,4} : 3 ~ 4번 반복\n",
+    "re.search('pi{3,5}g', 'piiiig') \n",
+    "\n",
+    "# 미니멈 매칭 (최소한의 매칭으로 검색)\n",
+    "re.search(r'<.+?>', '<html>haha</html>')\n",
+    "\n",
+    "# {} 뒤에 ?를 명시하면 최소한으로 매칭할 수 있따.\n",
+    "re.search('a{3,5}?', 'aaaa') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5) Match\n",
+    "* 주어진 **문자열의 시작부터 비교**하여 패턴이 있는지 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(0, 3), match='123'>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.match(r'\\d\\d\\d', 'my number is 123')\n",
+    "\n",
+    "re.match(r'\\d\\d\\d', '123 is my number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6) findall\n",
+    "* search : 최초로 매칭되는 패턴 반환\n",
+    "* findall : 매칭되는 **전체 패턴을 리스트 형태**로 반환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test@gmail.com', 'test@test.com']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'[\\w-]+@[\\w.]+', 'test@gmail.com haha test@test.com')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7) sub\n",
+    "* 일치하는 모든 패턴을 replace 함\n",
+    "* 두번째 인자에는 특정문자열 또는 함수가 올 수 있다.\n",
+    "* count : 0 이면 전체, 1 이상이면 해당 숫자만큼 치환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'replace! haha test@test.com'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.sub(r'[\\w-]+@[\\w.]+',  'replace!' ,'test@gmail.com haha test@test.com')\n",
+    "# 'replace! haha replace!'\n",
+    "\n",
+    "re.sub(r'[\\w-]+@[\\w.]+',  'replace!' ,'test@gmail.com haha test@test.com', count=1)\n",
+    "# 'replace! haha test@test.com'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8) Compile\n",
+    "* complie을 통해 해당 표현식을 re.RegexObject 객체로 저장하여 사용 가능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test@test.com']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "email_reg = re.compile(r'[\\w-]+@[\\w.]+')\n",
+    "\n",
+    "email_reg.search('test@test.com')\n",
+    "email_reg.findall('test@test.com')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 연습문제\n",
+    "* 아래 뉴스에서 이메일 주소를 추출해 보세요\n",
+    "* 다음중 올바른 (http, https) 웹페이지만 찾으시오"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "# 위의 두 모듈이 없는 경우에는 pip install requests bs4 실행\n",
+    "\n",
+    "def get_news_content(url):\n",
+    "    response = requests.get(url)\n",
+    "    content = response.text\n",
+    "\n",
+    "    soup = BeautifulSoup(content, 'html5lib')\n",
+    "\n",
+    "    div = soup.find('div', attrs = {'id' : 'harmonyContainer'})\n",
+    "    \n",
+    "    content = ''\n",
+    "    for paragraph in div.find_all('p'):\n",
+    "        content += paragraph.get_text()\n",
+    "        \n",
+    "    return content\n",
+    "\n",
+    "news1 = get_news_content('https://news.v.daum.net/v/20200824190611850')\n",
+    "#print(news1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re.search(r'[A-Za-z0-9]+\\@[A-Za-z0-9]+\\.[A-Za-z0-9]+\\w$',news1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "webs = ['http://www.test.co.kr', \n",
+    "        'https://www.test1.com', \n",
+    "        'http://www.test.com', \n",
+    "        'ftp://www.test.com', \n",
+    "        'http:://www.test.com',\n",
+    "       'htp://www.test.com',\n",
+    "       'http://www.google.com', \n",
+    "       'https://www.homepage.com.']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True, True, True, False, False, False, True, False]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정규표현식 compile \n",
+    "web_reg = re.compile(r'^https?://www\\.[\\w]+?\\..*\\w$')\n",
+    "\n",
+    "web_reg.search('http://www.test.co.kr') \n",
+    "\n",
+    "# Map 함수를 이용한 팔터링 수행\n",
+    "list(map(lambda w: web_reg.search(w) != None , webs))\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
