--- a/[Crawling] Beautiful Soup 이용한 HTML 파싱.ipynb
+++ b/[Crawling] Beautiful Soup 이용한 HTML 파싱.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,25 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<div class=\"test\" custom=\"good\" id=\"upper\">\n",
-       "<h3 title=\"Good Content Title\">Contents Title</h3>\n",
-       "<p>Test contents</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "soup = BeautifulSoup(html)\n",
     "\n",
@@ -96,29 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<div class=\"test\" custom=\"good\" id=\"upper\">\n",
-       " <h3 title=\"Good Content Title\">Contents Title</h3>\n",
-       " <p>Test contents</p>\n",
-       " </div>, <div class=\"test\" custom=\"nice\" id=\"lower\">\n",
-       " <p>Test Test Test 1</p>\n",
-       " <p>Test Test Test 2</p>\n",
-       " <p>Test Test Test 3</p>\n",
-       " </div>]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "soup.find_all('div')"
    ]
@@ -134,27 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<h3 title=\"Good Content Title\">Contents Title</h3>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Contents Title'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tag = soup.find('h3')\n",
     "print(tag)\n",
@@ -163,27 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<p>Test contents</p>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Test contents'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tag = soup.find('p')\n",
     "print(tag)\n",
@@ -192,32 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<div class=\"test\" custom=\"good\" id=\"upper\">\n",
-      "<h3 title=\"Good Content Title\">Contents Title</h3>\n",
-      "<p>Test contents</p>\n",
-      "</div>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nContents Title\\nTest contents\\n'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tag = soup.find('div', id='upper')\n",
     "print(tag)\n",
@@ -235,29 +146,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<h3 title=\"Good Content Title\">Contents Title</h3>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Good Content Title'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tag = soup.find('h3')\n",
     "print(tag)\n",
@@ -284,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,21 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "title :  \"마스크 안 써\" 난동 부리다 또 구속..\"엄정 대응\"\n",
-      "name 이지수M\n",
-      "create_time 2020.08.26. 20:31\n",
-      "repl 0\n",
-      "[뉴스데스크] ◀ 앵커 ▶경기도의 한 시내버스에서 마스크를 쓰지 않은 채 20분 동안 난동을 부린 한 승객이 구속 되는 일이 있었습니다.요즘 같이 엄중한 상황에서 마스크 하나 쓰는게 어려운 일은 아니죠?경찰이 엄정 대응 하겠다고 밝혔습니다. 이지수 기자가 취재 했습니다.◀ 리포트 ▶지난 23일 오후 경기도 수원의 한 버스정류장.러닝 셔츠 차림의 50대 남성이 시내버스에 올라타 자리에 앉습니다.잠시 뒤, 이 남성은 마스크를 턱까지 내리더니 건너편 여성에게 삿대질을 합니다.시비가 붙자 여성에게 다가가 주먹으로 때리는 시늉까지 합니다.이유는 자신을 쳐다봤다는 것.다른 남자 승객이 말리자 주춤하나 싶더니 다시 주먹을 휘두르며 위협합니다.운전기사가 \"난동을 멈추고 마스크도 써달라\"고 요청했지만, 아랑곳하지 않습니다.난동은 버스 앞뒤를 옮겨다니며 무려 18분이나 계속됐습니다. [손상경/수원중부경찰서 형사과장] \"(가해자는) 남이 자기를 쳐다보는게 그렇게 싫다는 거예요. 그때부터 마스크를 벗고 그 아주머니한테 행패를 (부렸어요).\"경찰이 출동해 이 남성을 제압했는데, 결국 폭행 등의 혐의로 구속됐습니다.지난 14일 서울 동대문에서 버스기사의 머리채를 잡고 폭행한 60대 남성 등에 이어 마스크 착용 관련 벌써 세 번째 구속입니다. 택시 조수석에 앉아있던 60대 남성이 갑자기 운전 중인 택시 기사의 얼굴을 주먹으로 때립니다.기사가 손으로 막아보지만 소용이 없습니다.[가해자] \"이 xx야 임마 아무리 잘났어도…\"\"마스크를 제대로 착용해 달라\"는 택시기사의 요청에 대한 반응은 주먹질이었습니다. 경찰은 이 남성에 대해서도 구속영장을 신청할 예정입니다.지난 5월 이후 마스크 미착용과 관련해 96명이 재판을 받게 됐고, 223명에 대해선 수사가 진행되고 있습니다.경찰은 대중교통뿐 아니라 전국 대부분 지역으로 마스크 착용 의무화가 확대된 상황에서 앞으로도 중대 사안은 구속 수사하겠다고 밝혔습니다.MBC뉴스 이지수입니다.(영상편집: 김현국)MBC 뉴스는 24시간 여러분의 제보를 기다립니다. ▷ 전화 02-784-4000 ▷ 이메일 mbcjebo@mbc.co.kr ▷ 카카오톡 @mbc제보이지수M 기자 (first@mbc.co.kr)기사 원문 - https://imnews.imbc.com/replay/2020/nwdesk/article/5888216_32524.html\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "url = 'https://news.v.daum.net/v/20200826203108883'\n",
     "\n",
@@ -330,6 +213,224 @@
     "    contents += p.get_text()\n",
     "\n",
     "print(contents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CSS 태그를 이용한 추출"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### select, select_one 함수 사용\n",
+    "* 태그명 찾기\n",
+    "* 자손 (하위 아래 모든 태그) 태그 찾기 : **tag tag** \n",
+    "* 자식 (바로 하위에 위치한 태그) 태그 찾기 : **tag > tag**\n",
+    "* ID명 검색 : **#**id\n",
+    "* Class명 검색 **.**class\n",
+    "\n",
+    "* 속성값 찾기 [name='test']\n",
+    "    * prefix : [name ^= 'test']\n",
+    "    * subfix : [name $= 'test']\n",
+    "    * substring : [name *= 'test']\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h3 class=\"tit_view\" data-translation=\"true\">\"마스크 안 써\" 난동 부리다 또 구속..\"엄정 대응\"</h3>,\n",
+       " <h3 class=\"txt_newsview\">많이본 뉴스</h3>,\n",
+       " <h3 class=\"txt_newsview\">포토&amp;TV</h3>,\n",
+       " <h3 class=\"txt_newsview\">실시간 주요이슈</h3>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://news.v.daum.net/v/20200826203108883'\n",
+    "\n",
+    "resp = requests.get(url)\n",
+    "soup = BeautifulSoup(resp.text)\n",
+    "\n",
+    "soup.select('h3') # h3으로 시작하는 모든 태그 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# ID값이 harmonyContainer에 속하는 하위 태그들 중, p 태그인 자손 태그\n",
+    "soup.select('#harmonyContainer p')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### class명 및 attribute 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h3 class=\"txt_newsview\">많이본 뉴스</h3>,\n",
+       " <h3 class=\"txt_newsview\">포토&amp;TV</h3>,\n",
+       " <h3 class=\"txt_newsview\">실시간 주요이슈</h3>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('h3.tit_view') # h3 태그의 class명이 tit_view 인 것\n",
+    "soup.select('.tit_view') #태그와 상관없이 class명으로만 찾음\n",
+    "\n",
+    "soup.select('h3[class=\"tit_view\"]')\n",
+    "\n",
+    "soup.select('h3[class^=\"txt\"]') ## prefix\n",
+    "\n",
+    "soup.select('h3[class$=\"view\"]') ## subfix\n",
+    "\n",
+    "soup.select('h3[class*=\"xt\"]') ## subfix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"txt_info\">이지수M</span>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 여러 값중 \n",
+    "soup.select('span.txt_info:nth-child(1)')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 정규표현식을 이용한 파싱\n",
+    "* re Module을 이용한 find_all 함수 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h1> <a class=\"link_daum\" href=\"https://www.daum.net\"> <img alt=\"Daum\" class=\"thumb_g\" height=\"19\" src=\"//t1.daumcdn.net/media/news/news2016/retina/logo_daum.jpg\" width=\"45\"/> </a> <a href=\"https://news.daum.net\" id=\"kakaoServiceLogo\"><span class=\"ir_wa\">뉴스</span></a> </h1>,\n",
+       " <h2 class=\"screen_out\">검색</h2>,\n",
+       " <h2 class=\"screen_out\">뉴스 메인메뉴</h2>,\n",
+       " <h2 class=\"screen_out\" id=\"kakaoBody\">사회</h2>,\n",
+       " <h3 class=\"tit_view\" data-translation=\"true\">\"마스크 안 써\" 난동 부리다 또 구속..\"엄정 대응\"</h3>,\n",
+       " <h3 class=\"txt_newsview\">많이본 뉴스</h3>,\n",
+       " <h3 class=\"txt_newsview\">포토&amp;TV</h3>,\n",
+       " <h3 class=\"txt_newsview\">실시간 주요이슈</h3>,\n",
+       " <h2 class=\"tit_direct\">바로가기</h2>,\n",
+       " <h2 class=\"screen_out\">서비스 이용정보</h2>]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all(re.compile('h\\d'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<img alt=\"Daum\" class=\"thumb_g\" height=\"19\" src=\"//t1.daumcdn.net/media/news/news2016/retina/logo_daum.jpg\" width=\"45\"/>]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('img', attrs={\"src\" : re.compile('\\.gif')})\n",
+    "soup.find_all('img', attrs={\"src\" : re.compile('\\.jpg')})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h3 class=\"tit_view\" data-translation=\"true\">\"마스크 안 써\" 난동 부리다 또 구속..\"엄정 대응\"</h3>,\n",
+       " <h3 class=\"txt_newsview\">많이본 뉴스</h3>,\n",
+       " <h3 class=\"txt_newsview\">포토&amp;TV</h3>,\n",
+       " <h3 class=\"txt_newsview\">실시간 주요이슈</h3>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('h3', class_=re.compile('.+view$'))"
    ]
   }
  ],
