Update Python Programming 기초.ipynb
2020.09.02 Python 실습 내역 정리(2)

--- a/Python Programming 기초.ipynb
+++ b/Python Programming 기초.ipynb
@@ -26,9 +26,17 @@
     "            - reduce\n",
     "            \n",
     "  > **정규 표현식**\n",
-    "  \n",
+    "        \n",
+    "        1) 패턴 검색\n",
+    "        2) grouping\n",
+    "        3) match, findall, sub\n",
+    "        \n",
     "  > **Class 및 Instace**\n",
-    "  \n"
+    "  \n",
+    "        1) 생성자\n",
+    "        2) Method\n",
+    "        3) 상속\n",
+    "        4) 재정의"
    ]
   },
   {
@@ -238,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -289,6 +299,187 @@
     "a = [1, 3, 5, 8]\n",
     "\n",
     "functools.reduce(lambda x,y:x+y, a) # 1+3= 4, 4+5= 9, 9+8 = 17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ****\n",
+    "\n",
+    "#### 3) 정규 표현식\n",
+    "* 패턴 검색\n",
+    "* grouping\n",
+    "* match, findall, sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test@test.com\n",
+      "test\n",
+      "test.com\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'numbernumber세기 사람들'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#########################################\n",
+    "# 패턴 검색\n",
+    "#########################################\n",
+    "\n",
+    "re.search(r'\\w.*@\\w.*','test@test.com')\n",
+    "re.search(r'\\.and', '.and')\n",
+    "\n",
+    "#########################################\n",
+    "# Grouping\n",
+    "#########################################\n",
+    "\n",
+    "# Group 대상을 ()로 묶음\n",
+    "\n",
+    "m = re.search(r'([a-zA-Z]*)@([a-zA-Z]*.[a-zA-Z]*)','test@test.com')\n",
+    "print(m.group(0))\n",
+    "print(m.group(1))\n",
+    "print(m.group(2))\n",
+    "\n",
+    "#########################################\n",
+    "# Match\n",
+    "#########################################\n",
+    "\n",
+    "# 주어진 문자열의 시작부터 비교하여 매칭되는 데이터 반환 \n",
+    "\n",
+    "re.match(r'\\d\\d', '123 is my number')\n",
+    "\n",
+    "#########################################\n",
+    "# findall\n",
+    "#########################################\n",
+    "\n",
+    "# 주어진 문자열의 전체를 비교하여 리스트로 반환\n",
+    "\n",
+    "re.findall(r'[\\w-]+@[\\w.]+', 'test@gmail.com haha test@test.com')\n",
+    "\n",
+    "\n",
+    "#########################################\n",
+    "# sub\n",
+    "#########################################\n",
+    "\n",
+    "# 주어진 문자열에 일치하는 모든 패턴을 replace 처리\n",
+    "\n",
+    "# sub(검색할 패턴, 변환값, 대상)\n",
+    "\n",
+    "re.sub(r'\\d', 'number', '22세기 사람들')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ****\n",
+    "\n",
+    "#### 4) Class 및 Instance\n",
+    "* 생성자\n",
+    "* method\n",
+    "* 상속\n",
+    "* 재정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Twenties\n"
+     ]
+    }
+   ],
+   "source": [
+    "##############################################\n",
+    "# 생성자 선언 및 method\n",
+    "##############################################\n",
+    "\n",
+    "class Humen:\n",
+    "    \n",
+    "    def __init__ (self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def age_info(self):\n",
+    "        if self.age <= 19:\n",
+    "            print('Teens')\n",
+    "        elif self.age <= 29:\n",
+    "            print('Twenties')\n",
+    "        else:\n",
+    "            print('Over')\n",
+    "        \n",
+    "men = Humen('Tom', 20)\n",
+    "\n",
+    "men.age_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Twenties\n",
+      "NOT_OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "##############################################\n",
+    "# 상속 \n",
+    "##############################################\n",
+    "\n",
+    "class Student(Humen):\n",
+    "    \n",
+    "    def __init__ (self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def age_info(self):\n",
+    "        # 부모 클래스 기능 호출\n",
+    "        super().age_info()\n",
+    "        if self.age <= 19:\n",
+    "            print('OK')\n",
+    "        else:\n",
+    "            print('NOT_OK')\n",
+    "\n",
+    "        \n",
+    "stu = Student('Jin', 28)\n",
+    "stu.age_info()"
    ]
   }
  ],
