--- a/[Numpy] Numpy와 Matplotlib.ipynb
+++ b/[Numpy] Numpy와 Matplotlib.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. ndarray 생성"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -43,6 +52,231 @@
     "y = np.array([2, 4, 6])\n",
     "\n",
     "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ndarray 생성 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 4 6]\n",
+      " [3 6 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1) np.array 생성 (자주 사용하지 않음)\n",
+    "z = np.array([[2, 4, 6], [3, 6, 9]])\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2) np.arange 생성\n",
+    "np.arange(1, 10) #array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3) np.ones 및 np.zeros \n",
+    "# 1 또는 0으로 채워진 원하는 차수만큼의 행렬 생성\n",
+    "\n",
+    "# ((행수, 열수))\n",
+    "\n",
+    "np.ones((2,3)) # 2차원\n",
+    "np.zeros((2,3,8)) # 3차원"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7],\n",
+       "       [7, 7, 7, 7]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4) np.empty 또는 np.full 생성\n",
+    "\n",
+    "np.empty((3,4))\n",
+    "np.full((3,4), 7) # 7값으로 이루어진 3행 4열"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 5) np.eye 생성\n",
+    "np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1. ,  5.5, 10. ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6) np.linspace 생성\n",
+    "np.linspace(1, 10, 3) # 1부터 10까지 3등분"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  4.,  7., 10.])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(1, 10, 4) # 1부터 10까지 4등분"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### reshape 함수 활용\n",
+    "* ndarray의 형태, 차원을 바꾸기 위해 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1],\n",
+       "        [ 2],\n",
+       "        [ 3]],\n",
+       "\n",
+       "       [[ 4],\n",
+       "        [ 5],\n",
+       "        [ 6]],\n",
+       "\n",
+       "       [[ 7],\n",
+       "        [ 8],\n",
+       "        [ 9]],\n",
+       "\n",
+       "       [[10],\n",
+       "        [11],\n",
+       "        [12]],\n",
+       "\n",
+       "       [[13],\n",
+       "        [14],\n",
+       "        [15]]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(1, 16)\n",
+    "\n",
+    "# 3행 5열 행렬로 변환\n",
+    "x.reshape(5,3,1) # 3차원 5개의 3행 1열로 생성\n",
+    "\n",
+    "# x.reshape(5,4) -> 오류 발생\n",
+    "# 5행 4열 생성 시 최소 20개의 숫자가 필요\n",
+    "# 따라서 reshape 함수 사용 시\n",
+    "# 생성하려는 행렬의 곱 (5*4=20)이 범위안에 존재하는지 확인 필요"
    ]
   }
  ],
