Update [Numpy] matplot을 이용한 그래프 생성.ipynb
2020.09.22 연습문제 실습

--- a/[Numpy] matplot을 이용한 그래프 생성.ipynb
+++ b/[Numpy] matplot을 이용한 그래프 생성.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,6 +400,65 @@
     "* 로또 번호 자동 생성하는 함수\n",
     "* numpy를 이용한 pi(원주율) 값 계산\n",
     "    * 몬테 카를로 방법 이용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[29 37 11  8 41 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 로또 번호 자동 생성\n",
+    "\n",
+    "def lottoNum ():\n",
+    "    return np.random.choice(np.arange(1,46), size = 6, replace=False)\n",
+    "\n",
+    "print(lottoNum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.1416076"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 몬테 카를로 방법을 이용한 pi 계산\n",
+    "\n",
+    "total = int(1e7) #반복횟수\n",
+    "print(total)\n",
+    "points = np.random.rand(total, 2) # x와 y의 좌표 생성\n",
+    "\n",
+    "# 원 내부에 존재하는 경우의 수 추출\n",
+    "in_points = np.sum(points ** 2, axis = 1) < 1\n",
+    "\n",
+    "\n",
+    "4 * np.sum(in_points)/ total"
    ]
   }
  ],
